--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<title>住所検索</title>
@@ -9,6 +9,8 @@
 <p>検索したい郵便番号を半角数字7桁で入力しEnterキーを押してください</p>
 <form action="/address" method="get">
 	<input type="text" name="zipcode" placeholder="郵便番号入力欄"/>
+	<span th:if="${#fields.hasErrors('zipcodeForm.zipcode')}"
+		  th:errors="*{zipcodeForm.zipcode}"></span>
 </form>
 </body>
 </html>
