メッセージも表示できるように変更

--- a/src/main/resources/templates/address.html
+++ b/src/main/resources/templates/address.html
@@ -24,6 +24,9 @@
 	<p>ステータスコード:
 	<td th:text="${addressinfo.status}"></td>
 	</p>
+	<p>
+	<td th:text="${addressinfo.message}"></td>
+	</p>
 	</body>
 </div>
 </html>
