zipCodeへ変数名変更

--- a/src/main/resources/templates/address.html
+++ b/src/main/resources/templates/address.html
@@ -9,7 +9,7 @@
 	<h3>検索結果</h3>
 	<tr th:each="body : ${addressbody}">
 		<p>郵便番号:
-		<td th:text="${body.zipcode}"></td>
+		<td th:text="${body.zipCode}"></td>
 		</p>
 		<p>都道府県名:
 		<td th:text="${body.address1}"></td>
